# sales-forecasting-mlops

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  pyproject.toml
.dvc/: config
data/raw/: data.csv.dvc
fmcg_sales_forecasting/api/: app.py
fmcg_sales_forecasting/baseline/: run_baseline.py
fmcg_sales_forecasting/baseline_model/: base_model.py
fmcg_sales_forecasting/configs/: config.yaml
fmcg_sales_forecasting/configs/dataset/: dataset.yaml
fmcg_sales_forecasting/configs/infer/: infer.yaml
fmcg_sales_forecasting/configs/mlflow/: mlflow.yaml
fmcg_sales_forecasting/configs/model/: tft.yaml
fmcg_sales_forecasting/configs/preprocessing/: base.yaml
fmcg_sales_forecasting/dataset/: fmcg_forecast_dataset.py
fmcg_sales_forecasting/infer/: fmcg_inference.py
fmcg_sales_forecasting/model/: tft_model.py
fmcg_sales_forecasting/preprocessing/: preprocess.py
fmcg_sales_forecasting/training/: train.py
graphics/: Untitled.ipynb  ensemble_fact_vs_prediction.csv  fact_vs_prediction_all_models.csv  metrics_by_category_ensemble.csv  metrics_by_category_last_value.csv  metrics_by_category_ma_6.csv  metrics_by_category_sarima.csv  metrics_by_category_seasonal_naive.csv  metrics_by_category_xgboost.csv  metrics_by_month_ensemble.csv  metrics_by_month_last_value.csv  metrics_by_month_ma_6.csv  metrics_by_month_sarima.csv  metrics_by_month_seasonal_naive.csv  metrics_by_month_xgboost.csv  tft_fact_vs_pred.csv  tft_feature_importance.csv  tft_heatmap.csv  tft_metrics_by_category.csv  tft_metrics_by_month.csv
(+1 files in other folders)
