[project]
name = "fmcg-forecasting"
version = "0.1.0"
description = "FMCG sales forecasting with Temporal Fusion Transformer"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "dvc-s3 (>=3.2.0,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "fire (>=0.7.0,<0.8.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"
dvc = "^3.64.2"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C90", "N"]
exclude = ["build", "dist", ".venv"]
fix = true
